--- a/services/fortuneteller/Dockerfile
+++ b/services/fortuneteller/Dockerfile
@@ -1,7 +1,11 @@
 FROM golang:alpine AS builder
 WORKDIR /app
-COPY ./ ./
+
 VOLUME ["/go", "/root/.cache"]
+COPY go.* .
+RUN go mod download
+
+COPY ./ ./
 RUN go build -o fortuneteller ./cmd/service
 
 FROM alpine:latest
@@ -10,4 +14,5 @@ COPY ./wait-for ./wait-for
 COPY --from=builder /app/fortuneteller ./fortuneteller
 EXPOSE 8080
 VOLUME ["/app/assets", "/app/books", "/app/books_keys"]
+
 ENTRYPOINT ["/app/wait-for", "database:5432", "--", "/app/fortuneteller"]
