--- a/services/fortuneteller/docker-compose.yml
+++ b/services/fortuneteller/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - database
     networks:
       - fortuneteller-net
+    command: ["--TokenKey", $TOKEN]
 
   database:
     image: postgres:13-alpine
